--- a/style/main.css
+++ b/style/main.css
@@ -1,15 +1,15 @@
-@import url(/style/normalize.css);
-@import url(/style/basic.css);
-@import url(/style/section/header.css);
-@import url(/style/section/hero.css);
-@import url(/style/section/info.css);
-@import url(/style/section/offer-home.css);
-@import url(/style/section/stocks.css);
-@import url(/style/section/reviews.css);
-@import url(/style/section/footer.css);
-@import url(/style/section-home/info-home.css);
-@import url(/style/section-home/home-description.css);
-@import url(/style/section-home/home-rules.css);
-@import url(/style/section-home/home-slider.css);
-@import url(/style/section-home/media-home.css);
-@import url(/style/menu-data.css);
+@import url(style/normalize.css);
+@import url(style/basic.css);
+@import url(style/section/header.css);
+@import url(style/section/hero.css);
+@import url(style/section/info.css);
+@import url(style/section/offer-home.css);
+@import url(style/section/stocks.css);
+@import url(style/section/reviews.css);
+@import url(style/section/footer.css);
+@import url(style/section-home/info-home.css);
+@import url(style/section-home/home-description.css);
+@import url(style/section-home/home-rules.css);
+@import url(style/section-home/home-slider.css);
+@import url(style/section-home/media-home.css);
+@import url(style/menu-data.css);
